--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -125,7 +125,7 @@ target_link_libraries(features_test rele)
 add_executable(pr_mdp src/test/core/ParametricRewardMDPTest.cpp)
 target_link_libraries(pr_mdp rele)
 
-#Matlab test (miscellaneous)
+#Matlab tests (miscellaneous)
 add_executable(chol_FIM src/test/miscellaneous/CholeskyFIMTest.cpp)
 target_link_libraries(chol_FIM rele)
 
