--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -200,6 +200,9 @@ target_link_libraries(lqr_BBO rele)
 add_executable(nls_BBO src/test/BBO/NlsBBOTest.cpp)
 target_link_libraries(nls_BBO rele)
 
+add_executable(segway_BBO src/test/BBO/SegwayBBOTest.cpp)
+target_link_libraries(segway_BBO rele)
+
 #PG test
 add_executable(nls_PG src/test/PG/NlsPGTest.cpp)
 target_link_libraries(nls_PG rele)
