--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -162,6 +162,9 @@ target_link_libraries(lqr_GIRL rele)
 add_executable(lqr_GMGIRL src/test/IRL/GMLQRGIRL.cpp)
 target_link_libraries(lqr_GMGIRL rele)
 
+add_executable(lqr_MLEGIRL src/test/IRL/MLELQRGIRL.cpp)
+target_link_libraries(lqr_MLEGIRL rele)
+
 add_executable(lqr_GIRLALL src/test/IRL/LQRGIRLALL.cpp)
 target_link_libraries(lqr_GIRLALL rele)
 
