--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -141,6 +141,9 @@ target_link_libraries(dist2mat rele)
 add_executable(pol2mat src/test/miscellaneous/Policy2MatlabTest.cpp)
 target_link_libraries(pol2mat rele)
 
+add_executable(mle_Policy src/test/miscellaneous/MLEPolicyTest.cpp)
+target_link_libraries(mle_Policy rele)
+
 #miscellaneous/policy_search tests
 add_executable(datadiff2mat src/test/miscellaneous/policy_search/DataDiff2Matlab.cpp)
 target_link_libraries(datadiff2mat rele)
