Work on Hierarchical Rocky
- Option-based policy written
- Some fixes to hierarchical GPOMDP
- still not working

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -8,7 +8,6 @@ if(catkin_FOUND)
 	catkin_package(INCLUDE_DIRS include
 	                            include/rele/core
 	                            include/rele/policy
-	                            include/rele/options
                                 include/rele/utils
                                 include/rele/generators
                                 include/rele/algorithms
@@ -31,7 +30,6 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
 
 include_directories(include/rele/core
                     include/rele/policy
-                    include/rele/options
                     include/rele/utils
                     include/rele/generators
                     include/rele/algorithms
@@ -206,7 +204,8 @@ add_executable(rocky_REPS src/test/Rocky/RockyTest.cpp
                           src/test/Rocky/RockyPolicy.cpp)
 target_link_libraries(rocky_REPS rele)
 
-add_executable(rocky_hierarchical src/test/Rocky/HierarchicalRockyTest.cpp)
+add_executable(rocky_hierarchical src/test/Rocky/HierarchicalRockyTest.cpp
+                                  src/test/Rocky/RockyOptions.cpp)
 target_link_libraries(rocky_hierarchical rele)
 
 #REPS test
