--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script: mkdir -p build && cd build && cmake ../rele && make
 sudo: required
 
 before_install:
-  - sudo add-apt-repository http://it.archive.ubuntu.com/ubuntu/ trusty main universe restricted multiverse
+  - echo "deb http://it.archive.ubuntu.com/ubuntu/ trusty main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
   - sudo apt-get install -y libarmadillo-dev
   - sudo apt-get install -y libnlopt-dev
