--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -147,6 +147,9 @@ target_link_libraries(mle_Policy rele)
 add_executable(rand_Policy src/test/miscellaneous/RandomPolicyTest.cpp)
 target_link_libraries(rand_Policy rele)
 
+add_executable(range_test src/test/miscellaneous/ModularRangeTest.cpp)
+target_link_libraries(range_test rele)
+
 #miscellaneous/policy_search tests
 add_executable(datadiff2mat src/test/miscellaneous/policy_search/DataDiff2Matlab.cpp)
 target_link_libraries(datadiff2mat rele)
