Added submodule makefile for tests
- test CMakeLists now is splitted in a submodule
- all is cleaner

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -117,193 +117,7 @@ else()
                                    ${Boost_LIBRARIES})
 endif()
 
-#nlopt
-add_executable(nlopt_test src/test/nlopt.cpp)
-target_link_libraries(nlopt_test  ${NLOPT_LIBRARY})
-
-#Core test
-add_executable(features_test src/test/core/FeaturesTest.cpp)
-target_link_libraries(features_test rele)
-
-add_executable(tiles_test src/test/core/TilesTest.cpp)
-target_link_libraries(tiles_test rele)
-
-add_executable(pr_mdp src/test/core/ParametricRewardMDPTest.cpp)
-target_link_libraries(pr_mdp rele)
-
-add_executable(dataset_test src/test/core/DatasetTest.cpp)
-target_link_libraries(dataset_test rele)
-
-add_executable(nn_test src/test/core/NeuralNetworksTest.cpp)
-target_link_libraries(nn_test rele)
-
-add_executable(trees_test src/test/core/TreesTest.cpp)
-target_link_libraries(trees_test rele)
-
-#Matlab tests (miscellaneous)
-add_executable(chol_FIM src/test/miscellaneous/CholeskyFIMTest.cpp)
-target_link_libraries(chol_FIM rele)
-
-add_executable(dist2mat src/test/miscellaneous/Distribution2MatlabTest.cpp)
-target_link_libraries(dist2mat rele)
-
-add_executable(pol2mat src/test/miscellaneous/Policy2MatlabTest.cpp)
-target_link_libraries(pol2mat rele)
-
-add_executable(mle_Policy src/test/miscellaneous/MLEPolicyTest.cpp)
-target_link_libraries(mle_Policy rele)
-
-add_executable(rand_Policy src/test/miscellaneous/RandomPolicyTest.cpp)
-target_link_libraries(rand_Policy rele)
-
-add_executable(range_test src/test/miscellaneous/ModularRangeTest.cpp)
-target_link_libraries(range_test rele)
-
-#miscellaneous/policy_search tests
-add_executable(datadiff2mat src/test/miscellaneous/policy_search/DataDiff2Matlab.cpp)
-target_link_libraries(datadiff2mat rele)
-
-#TD tests
-add_executable(simple_chain src/test/TD/SimpleChain.cpp)
-target_link_libraries(simple_chain rele)
-
-add_executable(simple_chain_mean src/test/TD/SimpleChainMeanReward.cpp)
-target_link_libraries(simple_chain_mean rele)
-
-add_executable(grid_world src/test/TD/GridWorldTest.cpp)
-target_link_libraries(grid_world rele)
-
-add_executable(mountain_car src/test/TD/MountainCarTest.cpp)
-target_link_libraries(mountain_car rele)
-
-#IRL tests
-add_executable(lqr_MWAL src/test/IRL/LQRMWAL.cpp)
-target_link_libraries(lqr_MWAL rele)
-
-add_executable(lqr_GIRL src/test/IRL/LQRGIRL.cpp)
-target_link_libraries(lqr_GIRL rele)
-
-add_executable(lqr_GMGIRL src/test/IRL/GMLQRGIRL.cpp)
-target_link_libraries(lqr_GMGIRL rele)
-
-add_executable(lqr_MLEGIRL src/test/IRL/MLELQRGIRL.cpp)
-target_link_libraries(lqr_MLEGIRL rele)
-
-add_executable(lqr_MLEGIRLALL src/test/IRL/MLELQRGIRLALL.cpp)
-target_link_libraries(lqr_MLEGIRLALL rele)
-
-add_executable(lqr_MLEGIRLALL1D src/test/IRL/MLELQRGIRLALL1D.cpp)
-target_link_libraries(lqr_MLEGIRLALL1D rele)
-
-add_executable(lqr_GIRLALL src/test/IRL/LQRGIRLALL.cpp)
-target_link_libraries(lqr_GIRLALL rele)
-
-add_executable(deep_GIRL src/test/IRL/DeepGIRL.cpp)
-target_link_libraries(deep_GIRL rele)
-
-add_executable(dam_GIRL src/test/IRL/DamGIRL.cpp)
-target_link_libraries(dam_GIRL rele)
-
-add_executable(simple_chain_MWAL src/test/IRL/SimpleChainMWAL.cpp)
-target_link_libraries(simple_chain_MWAL rele)
-
-add_executable(mc_GIRL src/test/IRL/McGIRLTest.cpp)
-target_link_libraries(mc_GIRL rele)
-
-add_executable(hw_GIRL src/test/IRL/HwGIRLTest.cpp)
-target_link_libraries(hw_GIRL rele)
-
-#Solvers tests
-add_executable(lqr_solver_test src/test/solvers/LQRsolverTest.cpp)
-target_link_libraries(lqr_solver_test rele)
-
-add_executable(dynamic_programming_test src/test/solvers/dynamic_programming/DynamicProgrammingTest.cpp)
-target_link_libraries(dynamic_programming_test rele)
-
-#Rocky test
-add_executable(rocky_REPS src/test/Rocky/RockyTest.cpp
-                          src/test/Rocky/RockyPolicy.cpp)
-target_link_libraries(rocky_REPS rele)
-
-add_executable(rocky_hierarchical src/test/Rocky/HierarchicalRockyTest.cpp
-                                  src/test/Rocky/RockyOptions.cpp)
-target_link_libraries(rocky_hierarchical rele)
-
-#Hierarchical test
-add_executable(taxi_hierarchical src/test/hierarchical/taxi/TaxiFuelTest.cpp
-                                 src/test/hierarchical/taxi/TaxiOptions.cpp)
-target_link_libraries(taxi_hierarchical rele)
-
-
-#REPS test
-add_executable(lqr_REPS src/test/REPS/LqrREPSTest.cpp)
-target_link_libraries(lqr_REPS rele)
-
-add_executable(nls_REPS src/test/REPS/NlsREPSTest.cpp)
-target_link_libraries(nls_REPS rele)
-
-#BBO test
-add_executable(deep_BBO src/test/BBO/DeepBBOTest.cpp)
-target_link_libraries(deep_BBO rele)
-
-add_executable(portfolio_BBO src/test/BBO/PortfolioBBOTest.cpp)
-target_link_libraries(portfolio_BBO rele)
-
-add_executable(lqr_BBO src/test/BBO/LqrBBOTest.cpp)
-target_link_libraries(lqr_BBO rele)
-
-add_executable(nls_BBO src/test/BBO/NlsBBOTest.cpp)
-target_link_libraries(nls_BBO rele)
-
-add_executable(segway_BBO src/test/BBO/SegwayBBOTest.cpp)
-target_link_libraries(segway_BBO rele)
-
-add_executable(ucp_BBO src/test/BBO/UnicyclePolarBBOTest.cpp)
-target_link_libraries(ucp_BBO rele)
-
-add_executable(mh_BBO src/test/BBO/MultiHeatBBOTest.cpp)
-target_link_libraries(mh_BBO rele)
-
-#PG test
-add_executable(nls_PG src/test/PG/NlsPGTest.cpp)
-target_link_libraries(nls_PG rele)
-
-add_executable(lqr_PG src/test/PG/LqrPGTest.cpp)
-target_link_libraries(lqr_PG rele)
-
-add_executable(portfolio_PG src/test/PG/PortfolioPGTest.cpp)
-target_link_libraries(portfolio_PG rele)
-
-add_executable(deep_PG src/test/PG/DeepPGTest.cpp)
-target_link_libraries(deep_PG rele)
-
-add_executable(dam_PG src/test/PG/DamPGTest.cpp)
-target_link_libraries(dam_PG rele)
-
-add_executable(ship_PG src/test/PG/ShipSteeringPGTest.cpp)
-target_link_libraries(ship_PG rele)
-
-add_executable(taxi_PG src/test/PG/TaxiFuelPGTest.cpp)
-target_link_libraries(taxi_PG rele)
-
-#Batch test
-add_executable(deep_off src/test/Batch/DeepBatchTest.cpp)
-target_link_libraries(deep_off rele)
-
-add_executable(nls_off src/test/Batch/NlsBatchTest.cpp)
-target_link_libraries(nls_off rele)
-
-add_executable(mc_LSPI src/test/Batch/McLSPITest.cpp)
-target_link_libraries(mc_LSPI rele)
-
-#Others tests
-add_executable(nls_OptParams src/test/Others/NlsOptimalParamsTest.cpp)
-target_link_libraries(nls_OptParams rele)
-
-#MultiHeat tests
-add_executable(mh_test src/test/MultiHeat/MultiHeatTest.cpp)
-target_link_libraries(mh_test rele)
-
+add_subdirectory(src/test)
 
 # ------------------------ INSTALLATION ------------------------
 
