GIRL LQR test simplified
- now girl has a simplified LQR test
- now is using plain regressors instead of custom classes

--- a/rele/src/test/CMakeLists.txt
+++ b/rele/src/test/CMakeLists.txt
@@ -66,6 +66,10 @@ target_link_libraries(mountain_car rele)
 add_executable(lqr_MWAL IRL/LQRMWAL.cpp)
 target_link_libraries(lqr_MWAL rele)
 
+add_executable(lqr_GIRL IRL/GIRL/GIRL_LQR.cpp)
+target_link_libraries(lqr_GIRL rele)
+
+
 #add_executable(lqr_GIRL IRL/LQRGIRL.cpp)
 #target_link_libraries(lqr_GIRL rele)
 
