--- a/rele/src/test/CMakeLists.txt
+++ b/rele/src/test/CMakeLists.txt
@@ -26,6 +26,9 @@ target_link_libraries(nn_test rele)
 add_executable(trees_test core/TreesTest.cpp)
 target_link_libraries(trees_test rele)
 
+add_executable(gaussian_test core/GaussianMixtureModelsTest.cpp)
+target_link_libraries(gaussian_test rele)
+
 #Matlab tests (miscellaneous)
 add_executable(chol_FIM miscellaneous/CholeskyFIMTest.cpp)
 target_link_libraries(chol_FIM rele)
@@ -74,6 +77,9 @@ target_link_libraries(nls_GIRL rele)
 
 add_executable(ship_GIRL IRL/GIRL/GIRL_ShipSteering.cpp)
 target_link_libraries(ship_GIRL rele)
+
+add_executable(gaussian_GIRL IRL/GIRL/GIRL_Gaussian.cpp)
+target_link_libraries(gaussian_GIRL rele)
 
 
 #add_executable(lqr_GIRL IRL/LQRGIRL.cpp)
