Lot of work on test
- Lot of IRL tests
- ShipSteering IRL test working
- Added Pursuer domain
- Added Pursuer test in PG
- Some cleanup in the gaussian Test for multidimensional state space
- other stuff

--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -186,6 +186,9 @@ target_link_libraries(dam_PG rele)
 add_executable(ship_PG PG/ShipSteeringPGTest.cpp)
 target_link_libraries(ship_PG rele)
 
+add_executable(pursuer_PG PG/PursuerPGTest.cpp)
+target_link_libraries(pursuer_PG rele)
+
 add_executable(taxi_PG PG/TaxiFuelPGTest.cpp)
 target_link_libraries(taxi_PG rele)
 
