Work on policies and approximators
- added Copyright to policies
- added GenericMVNPolicy
- added SaturatedRegressor
- formatted sources

--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -32,6 +32,9 @@ target_link_libraries(gaussian_test rele)
 add_executable(em_test core/ExpectationMaximizationTest.cpp)
 target_link_libraries(em_test rele)
 
+add_executable(saturated_test core/SaturatedRegressorTest.cpp)
+target_link_libraries(saturated_test rele)
+
 #Matlab tests (miscellaneous)
 add_executable(chol_FIM miscellaneous/CholeskyFIMTest.cpp)
 target_link_libraries(chol_FIM rele)
