--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -112,6 +112,8 @@ target_link_libraries(nls_EMIRL rele)
 add_executable(ship_EMIRL IRL/EMIRL/EMIRL_ShipSteering.cpp)
 target_link_libraries(ship_EMIRL rele)
 
+add_executable(gmm_features_test IRL/GMM/GMMClusteringTest.cpp)
+target_link_libraries(gmm_features_test rele)
 
 #add_executable(lqr_GIRL IRL/LQRGIRL.cpp)
 #target_link_libraries(lqr_GIRL rele)
