--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -100,6 +100,9 @@ target_link_libraries(ship_GIRL rele)
 add_executable(gaussian_GIRL IRL/GIRL/GIRL_Gaussian.cpp)
 target_link_libraries(gaussian_GIRL rele)
 
+add_executable(nls_PGIRL IRL/PGIRL/PGIRL_NLS.cpp)
+target_link_libraries(nls_PGIRL rele)
+
 add_executable(lqr_MGIRL IRL/GIRL/MGIRL_LQR.cpp)
 target_link_libraries(lqr_MGIRL rele)
 
