- Fixed Neural Network input and output parameters type - gridFQI moved to a directory of its own - Grid Basis Functions to manage grid world state-action features created

--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -226,7 +226,7 @@ target_link_libraries(taxi_PG rele)
 add_executable(deep_off Batch/DeepBatchTest.cpp)
 target_link_libraries(deep_off rele)
 
-add_executable(gridFQI Batch/GridFQITest.cpp)
+add_executable(gridFQI Batch/testFQI/GridFQITest.cpp)
 target_link_libraries(gridFQI rele)
 
 add_executable(nls_off Batch/NlsBatchTest.cpp)
