MAB interface added.
- MAB interface.
- SimpleMAB and LinearMAB classes to distinguish different types of MAB problems
- Two MAB examples (Roulette and InternetAds) added
- MAB test added

--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -72,6 +72,9 @@ target_link_libraries(simple_chain rele)
 add_executable(simple_chain_mean TD/SimpleChainMeanReward.cpp)
 target_link_libraries(simple_chain_mean rele)
 
+add_executable(mab TD/MABTest.cpp)
+target_link_libraries(mab rele)
+
 add_executable(grid_world TD/GridWorldTest.cpp)
 target_link_libraries(grid_world rele)
 
