--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -229,7 +229,7 @@ target_link_libraries(taxi_PG rele)
 add_executable(deep_off Batch/DeepBatchTest.cpp)
 target_link_libraries(deep_off rele)
 
-add_executable(gridFQI Batch/testFQI/GridFQITest.cpp)
+add_executable(gridFQI Batch/GridFQITest.cpp)
 target_link_libraries(gridFQI rele)
 
 add_executable(nls_off Batch/NlsBatchTest.cpp)
