--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -245,3 +245,7 @@ target_link_libraries(nls_OptParams rele)
 #MultiHeat tests
 add_executable(mh_test MultiHeat/MultiHeatTest.cpp)
 target_link_libraries(mh_test rele)
+
+#UCB1
+add_executable(ucb1_test MAB/UCB1Test.cpp)
+target_link_libraries(ucb1_test rele)
