Correction in CMakeLists.txt to handle GSL files.

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -114,6 +114,9 @@ file(GLOB_RECURSE ReLe_SOURCE
                   src/statistics/*.cpp
                   src/solvers/*.cpp)
 
+if(NOT ${GLS_FOUND})
+	list(REMOVE_ITEM "src/algorithms/td/WQ-Learning.cpp")
+
 file(GLOB_RECURSE ReLe_INCLUDE
                   include/*.h)
 
