Correction in CMakeLists.txt to handle GSL files.

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -116,6 +116,7 @@ file(GLOB_RECURSE ReLe_SOURCE
 
 if(NOT ${GLS_FOUND})
 	list(REMOVE_ITEM "src/algorithms/td/WQ-Learning.cpp")
+endif()
 
 file(GLOB_RECURSE ReLe_INCLUDE
                   include/*.h)
